# practic

./: CMakeLists.txt  README  conanfile.txt  test.cpp
cmake/: autoconan.cmake
include/practice_project/: hello_world_header.h
src/: hello_world_header.cpp  main.cpp
